# livo2

./: .gitignore  CAMERA_MODELS_CONVERSION_PLAN.md  FISHEYE_INTEGRATION_PLAN.md  GUI_DESIGN_PLAN.md  README.md  build.sh  git_push_with_token.sh  imgui.ini  install_dependencies.sh  install_sophus.sh  run_viewer.sh
.cursor/rules/: enviroment.mdc
.cursor/rules/language/: RULE.md
dependencies/: install_all_dependencies.sh  install_common_dependencies.sh  install_ros2_jazzy.sh
dependencies/Livox-SDK2/: build.sh
dependencies/Livox-SDK2/samples/livox_lidar_quick_start/: mid360_config.json
dependencies/Livox-SDK2/sdk_core/logger_handler/: .file_manager.h.swp
dependencies/calibration/: build.sh
dependencies/calibration/ceres-solver/: build.sh
dependencies/calibration/gtsam/: .gitignore  build.sh
dependencies/calibration/iridescence/: build.sh
dependencies/drive_ws/: build.sh
dependencies/drive_ws/src/livox_ros_driver2/launch_ROS2/: msg_MID360_custom_launch.py  msg_MID360_launch.py
dependencies/livo/Sophus/: CMakeLists.txt  SophusConfig.cmake.in  build.sh
dependencies/livo/Sophus/sophus/: so2.cpp
drive_ws/src/livox_ros_driver2/config/: MID360_config_template.json
drive_ws/src/livox_ros_driver2/src/: lddc.cpp
gui/: .gitignore  README.md  bag_mapping_tab.py  calibration_tab.py  geometry_utils.py  imgui.ini  install_dependencies.sh  livox_tab.py  localization2_tab.py  mapping_tab.py  pcd_viewer_tab.py  recording_tab.py  replay_tab.py  requirements.txt  run_viewer.sh  setup_venv.sh  theta_tab.py  theta_viewer.py
scripts/: run_bag_mapping.sh  run_bag_mapping_manual.md  start_localization2.sh
ws/: .gitignore
ws/calibration_data/preprocessed/: calib.json  fast_livo2_calib.yaml
ws/src/FAST-LIVO2/: CMakeLists.txt  package.xml
ws/src/FAST-LIVO2/config/: avia_perspective.yaml  camera_perspective.yaml  mid360_equirectangular.yaml  mid360_perspective.yaml  mid360_perspective.yaml.backup  mid360_perspective_performance.yaml
ws/src/FAST-LIVO2/docs/: EQUIRECTANGULAR_CAMERA_USAGE.md
ws/src/FAST-LIVO2/include/: LIVMapper.h  common_lib.h  vio.h
ws/src/FAST-LIVO2/include/Scancontext/: Scancontext.h
ws/src/FAST-LIVO2/launch/: mapping_avia_perspective.launch.py  mapping_mid360_equirectangular.launch.py  mapping_mid360_perspective.launch.py  pcd_viewer.launch.py
ws/src/FAST-LIVO2/rviz_cfg/: fast_livo2.rviz  pcd_viewer.rviz
ws/src/FAST-LIVO2/scripts/: README_calibration_bag.md  README_calibration_conversion.md  convert_calib_to_fast_livo2.py  create_calibration_bag.py  create_calibration_bag_ros2.sh  merge_pcd_maps.py
ws/src/FAST-LIVO2/src/: LIVMapper.cpp  Scancontext.cpp  main.cpp  pcd_viewer_node.cpp  preprocess.cpp  vio.cpp
ws/src/FAST_LIO_LOCALIZATION2/: CMakeLists.txt  package.xml  setup.py
ws/src/FAST_LIO_LOCALIZATION2/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
ws/src/FAST_LIO_LOCALIZATION2/fast_lio_localization/: global_localization.py  publish_initial_pose.py  ros2_numpy_wrapper.py  transform_fusion.py
ws/src/FAST_LIO_LOCALIZATION2/include/Scancontext/: Scancontext.h
ws/src/FAST_LIO_LOCALIZATION2/launch/: localization.launch.py  localization_with_fast_livo2.launch.py
ws/src/FAST_LIO_LOCALIZATION2/rviz/: fastlio_localization.rviz
ws/src/FAST_LIO_LOCALIZATION2/rviz_cfg/: livox_nav.rviz  localization.rviz
ws/src/FAST_LIO_LOCALIZATION2/src/: IMU_Processing.hpp  laserMapping.cpp
ws/src/direct_visual_lidar_calibration/docs/: example.md  example_map.md
ws/src/direct_visual_lidar_calibration/src/: preprocess_map.cpp  preprocess_ros2.cpp
ws/src/direct_visual_lidar_calibration/src/test/: normalization.cpp
ws/src/direct_visual_lidar_calibration/src/vlcal/preprocess/: preprocess.cpp
ws/src/livox_msg_converter/: CMakeLists.txt  README.md  package.xml
ws/src/livox_msg_converter/launch/: livox_converter.launch.py  livox_msg_converter.launch.py
ws/src/livox_msg_converter/src/: livox_msg_converter_node.cpp
ws/src/livox_ros_driver2/config/: MID360_config.json
ws/src/rpg_vikit/vikit_common/: CMakeLists.txt
ws/src/rpg_vikit/vikit_common/CMakeModules/: FindSophus.cmake
ws/src/rpg_vikit/vikit_common/include/vikit/: equirectangular_camera.h
ws/src/rpg_vikit/vikit_common/src/: equirectangular_camera.cpp
ws/src/rpg_vikit/vikit_ros/: CMakeLists.txt
ws/src/rpg_vikit/vikit_ros/include/vikit/: camera_loader.h
ws/src/theta_driver/: CMakeLists.txt
ws/src/theta_driver/3rd/: build.sh
ws/src/theta_driver/3rd/libuvc-theta-sample/gst/: Makefile  Makefile_resizable  README_QR_360.md  create_video2.sh  gst_viewer.c  gst_viewer_resizable  gst_viewer_resizable.c  qr_detector.py  qr_detector_enhanced.py  requirements.txt  run_theta_qr.sh  start_enhanced.sh  thetauvc.c
ws/src/theta_driver/include/theta_driver/: atan_converter_lib.hpp  camera_info_publisher_lib.hpp  cubemap_converter_lib.hpp  cubemap_converter_optimized.hpp  equidistant_converter_lib.hpp  ocam_converter_lib.hpp  perspective_converter_lib.hpp  polynomial_converter_lib.hpp  qr_detector_lib.hpp  qr_detector_optimized.hpp  theta_driver_lib.hpp
ws/src/theta_driver/launch/: theta_cubemap.launch.py  theta_cubemap_optimized.launch.py  theta_cubemap_qr.launch.py  theta_perspective_calibration.launch.py  theta_qr_optimized.launch.py
ws/src/theta_driver/src/: atan_converter_lib.cpp  atan_converter_node.cpp  camera_info_publisher_lib.cpp  camera_info_publisher_node.cpp  cubemap_converter_lib.cpp  cubemap_converter_node.cpp  cubemap_converter_optimized.cpp  cubemap_converter_optimized_node.cpp  equidistant_converter_lib.cpp  equidistant_converter_node.cpp  ocam_converter_lib.cpp  ocam_converter_node.cpp  perspective_converter_lib.cpp  perspective_converter_node.cpp  polynomial_converter_lib.cpp  polynomial_converter_node.cpp  qr_detector_lib.cpp  qr_detector_node.cpp  qr_detector_optimized.cpp  qr_detector_optimized_node.cpp  theta_driver_lib.cpp
